AV2 Changelog :: version a4.5

* Reduced penguin spawning (to 1/3)
* Reduced penguin drop rate (to 1/2)
* Wandering bison wanders near owner
* Bison toggles following via bison whistle
* Log bison deaths when killed by another player
* Mobs drop scrolls more often

> Fix crash when killing entity without registered lang file name - FOR REAL THIS TIME
> Fix bug where fireball keeps exploding when held on ground
> Fix issue when executing certain commands on server
> Fix fire arc making fires when player-controlled
> Fix fire/water arc StatCtrls not removed on relog