@@ -57,7 +57,7 @@ public class StatCtrlThrowBlock extends StatusControl {
 				entity);
 		
 		if (floating != null) {
-			
+
 			float yaw = (float) Math.toRadians(entity.rotationYaw);
 			float pitch = (float) Math.toRadians(entity.rotationPitch);
 			
@@ -67,12 +67,14 @@ public class StatCtrlThrowBlock extends StatusControl {
 			Vector lookDir = Vector.toRectangular(yaw, pitch);
 			floating.velocity().add(lookDir.times(forceMult));
 			floating.setBehavior(new FloatingBlockBehavior.Thrown());
-			
+
 			data.removeStatusControl(PLACE_BLOCK);
-			
+
+			return true;
+
 		}
-		
-		return true;
+
+		return false;
 		
 	}
 	
